<resources>
    <string name="app_name">Reading Tracker</string>
    <string name="add_btn">Add</string>
    <string name="title">Title</string>
    <string name="pagenumber">Pagenumber</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reading">Reading</string>
    <string name="timer">Timer</string>
    <string name="add">Add</string>
    <string name="todo">Todo</string>
    <string name="todo_hint">What do you need to do?</string>
    <string name="edit">Edit</string>
</resources>
