<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tabbar"
        android:id="@+id/container"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/tabbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="3">

        <Button
            android:id="@+id/reading_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading"
            android:layout_weight="1" />

        <Button
            android:id="@+id/timer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:layout_weight="1" />

        <Button
            android:id="@+id/todo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
